platform/kubernetes-dashboard/base/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
spec:
  hostnames:
  - kubernetes-dashboard.seigra.net
  parentRefs:
  - name: kubernetes-dashboard
  rules:
  - backendRefs:
    - name: kubernetes-dashboard-auth
      port: 8000
    matches:
    - path:
        value: /api/v1/login
    - path:
        value: /api/v1/csrftoken/login
    - path:
        value: /api/v1/me
  - backendRefs:
    - name: kubernetes-dashboard-api
      port: 8000
    matches:
    - path:
        value: /api
    - path:
        value: /metrics
  - backendRefs:
    - name: kubernetes-dashboard-web
      port: 8000
    matches:
    - path:
        value: /
