platform/kubernetes-dashboard/base/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kubernetes-dashboard
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: kubernetes-dashboard
  oidc:
    provider:
      authorizationEndpoint: https://auth.seigra.net/realms/home/protocol/openid-connect/auth
      tokenEndpoint: https://auth.seigra.net/realms/home/protocol/openid-connect/token
      issuer: https://auth.seigra.net/realms/home
    forwardAccessToken: true
    refreshToken: true
    cookieNames:
      idToken: IdToken
      accessToken: AccessToken
    clientID: kubernetes-dashboard
    clientSecret:
      name: kubernetes-dashboard-oidc-secret
